--- a/src/Layout/Header/Header.css
+++ b/src/Layout/Header/Header.css
@@ -127,7 +127,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 5px;
 }
 
 .right-con form div {
@@ -136,7 +136,7 @@
   gap: 5px;
 }
 .register-form {
-  margin-top: 20px;
+  margin-top: 5px;
   width: 60%;
 }
 .register-form div input {
@@ -155,8 +155,17 @@
 .register-btn {
   background-color: aqua;
   color: #111;
-  padding: 15px 5px;
+  padding: 10px 5px;
   border: none;
   border-radius: 5px;
   font-size: 18px;
+  margin-top: 20px;
+}
+
+.errors {
+  border: 1px solid red !important;
+}
+.p-error {
+  color: red;
+  margin: 0;
 }
