--- a/src/Layout/Header/Header.css
+++ b/src/Layout/Header/Header.css
@@ -159,13 +159,21 @@
   border: none;
   border-radius: 5px;
   font-size: 18px;
-  margin-top: 20px;
+  margin: 20px 0;
 }
 
 .errors {
-  border: 1px solid red !important;
+  border: 2px solid red !important;
+}
+.good {
+  border: 2px solid green !important;
 }
 .p-error {
   color: red;
   margin: 0;
+  padding: 0;
+}
+.register-icon {
+  color: red;
+  font-size: 50px;
 }
