--- a/src/Layout/Header/Header.css
+++ b/src/Layout/Header/Header.css
@@ -40,15 +40,15 @@
   border: none;
   border-radius: 5px;
   height: 100%;
-  background-color: aqua;
   font-size: 16px;
   color: #111;
   background-color: aliceblue;
   margin-left: 10px;
 }
 .btn-auth {
-  background-color: aqua;
   color: #111;
+  background-color: #0d9488;
+  color: #fff;
   padding: 7px 15px;
   border-radius: 5px;
   border: none;
