message to coomit on drag

--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -5,3 +5,28 @@
   color: #fff;
   border-radius: 5px;
 }
+
+/* Media screen for Menu */
+@media screen and (max-width:768px){
+  .inner-div .menu-container{
+    width: 100%;
+    padding:10px;
+    margin: 0;
+  }
+
+  .inner-div{
+    width: 100%;
+  }
+
+  .menu-header{
+    padding:5px;
+  }
+
+  .menu-header .inner-div{
+   width: 100%;
+   border-radius: 0;
+
+   
+  }
+  
+}
