--- a/src/Components/Home/infoBox.css
+++ b/src/Components/Home/infoBox.css
@@ -4,3 +4,17 @@
 .infoBox:hover .infoBox {
   font-size: 20px;
 }
+
+/* Media screen for InfoBox */
+@media screen and  (max-width:768px) {
+
+  .infoBox{
+    text-align: center;
+    display: flex;
+    align-items: center;
+    width: 50%;
+    margin: 1em auto;
+    justify-content: center;
+  }
+  
+}
